maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:55: error: type mismatch;
 found   : Unit
 required: plm.universe.Direction
  if (y!=ymax-1){  if (min(haut,bas)==bas){if (!aMurNord(x,y+1)){resultat=Direction.SUD}}
  ^